--- a/packages/youtube_player_flutter/pubspec.yaml
+++ b/packages/youtube_player_flutter/pubspec.yaml
@@ -6,7 +6,7 @@ homepage: https://github.com/sarbagyastha/youtube_player_flutter/tree/main/packa
 
 environment:
   sdk: ^3.5.0
-  flutter: '>=3.24.0'
+  flutter: ">=3.24.0"
 
 dependencies:
   flutter:
